--- a/config
+++ b/config
@@ -155,6 +155,6 @@ bar {
         status_command i3status
 }
 
-exec vmware-user-suid-wrapper
+exec vmware-user
 exec --no-startup-id xsetroot -solid "#000000"
 
