--- a/config
+++ b/config
@@ -156,6 +156,6 @@ bar {
 }
 
 exec vmware-user
-exec --no-startup-id xsetroot -solid "#000000"
+exec --no-startup-id hsetroot -solid "#000000"
 
 exec compton --config ~/.config/i3/compton.conf
