--- a/config
+++ b/config
@@ -10,6 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 # Use command xmodmap to view what mod keys there are.
+# Default is Mod1.
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
