Now using a basic compton file.

--- a/config
+++ b/config
@@ -159,5 +159,4 @@ bar {
 
 exec vmware-user
 exec --no-startup-id hsetroot -solid "#000000"
-
-# exec compton --config ~/.config/i3/compton.conf
+exec --no-startup-id compton --config ~/.config/i3/compton.conf -b
