--- a/config
+++ b/config
@@ -159,4 +159,4 @@ bar {
 
 exec vmware-user
 exec --no-startup-id hsetroot -solid "#000000"
-exec --no-startup-id compton --config ~/.config/i3/compton.conf -b
+exec --no-startup-id compton --config ~/.config/i3/compton.conf
