--- a/config
+++ b/config
@@ -157,6 +157,6 @@ bar {
         status_command i3status
 }
 
-exec vmware-user
+# exec vmware-user
 exec --no-startup-id hsetroot -solid "#000000"
-exec --no-startup-id compton --config ~/.config/i3/compton.conf
+# exec --no-startup-id compton --config ~/.config/i3/compton.conf
