Added mod+Shift+x to lock screen

--- a/config
+++ b/config
@@ -37,6 +37,9 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
+# Lock Screen
+bindsym $mod+Shift+x exec i3lock --color "#000000"
+
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
