--- a/config
+++ b/config
@@ -163,7 +163,7 @@ bar {
 exec_always --no-startup-id xmodmap -e "clear lock"
 exec_always --no-startup-id xmodmap -e "keycode 66 = Escape NoSymbol Escape"
 
-exec vmware-user
+# exec vmware-user
 exec --no-startup-id hsetroot -solid "#000000"
-exec --no-startup-id compton --config ~/.config/i3/compton.conf
-exec --no-startup-id nm-applet
+# exec --no-startup-id compton --config ~/.config/i3/compton.conf
+# exec --no-startup-id nm-applet
