Added applets for bluetooth and volume.

--- a/config
+++ b/config
@@ -161,3 +161,6 @@ bar {
 
 exec_always --no-startup-id xmodmap -e "clear lock"
 exec_always --no-startup-id xmodmap -e "keycode 66 = Escape NoSymbol Escape"
+exec_always --no-startup-id volumeicon
+exec_always --no-startup-id blueman-applet
+
