--- a/config
+++ b/config
@@ -163,4 +163,4 @@ exec_always --no-startup-id xmodmap -e "clear lock"
 exec_always --no-startup-id xmodmap -e "keycode 66 = Escape NoSymbol Escape"
 exec_always --no-startup-id volumeicon
 exec_always --no-startup-id blueman-applet
-
+exec_always --no-startup-id ~/.config/i3/g-layout.sh
