--- a/config
+++ b/config
@@ -177,8 +177,10 @@ mode "screenshot" {
 }
 bindsym Print mode "screenshot"
 
+# Use 'setxkbmap -layout us' to reset keyboard layout.
+# keycode/keysym <CODE> = NORMAL SHIFT MODE_SWITCH
 exec_always --no-startup-id xmodmap -e "clear lock"
-exec_always --no-startup-id xmodmap -e "keycode 66 = Escape NoSymbol Escape"
+exec_always --no-startup-id xmodmap -e "keycode 66 = Escape Caps_Lock Escape"
 exec_always --no-startup-id xsetroot -solid "#202020"
 
 workspace 1 output primary
