Updated tmux configuration.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 bind | split-window -h
 bind - split-window -v
 
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 bind -n C-Left select-pane -L
 bind -n C-Right select-pane -R
@@ -10,3 +10,7 @@ bind -n C-Down select-pane -D
 
 set -g mouse on
 setw -g mode-keys vi
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mrde-vi 'y' send -X copy-selection-and-cancel
