--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,29 @@
-bind | split-window -h
-bind - split-window -v
+set -g default-terminal "xterm-256color"
+
+set -sg escape-time 0
+
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind + new-window -c "#{pane_current_path}"
 
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
-bind -n C-Left select-pane -L
-bind -n C-Right select-pane -R
-bind -n C-Up select-pane -U
-bind -n C-Down select-pane -D
+bind -n M-C-Left select-pane -L
+bind -n M-C-Right select-pane -R
+bind -n M-C-Up select-pane -U
+bind -n M-C-Down select-pane -D
+
+bind -n M-C-h select-pane -L
+bind -n M-C-l select-pane -R
+bind -n M-C-j select-pane -U
+bind -n M-C-k select-pane -D
 
 set -g mouse on
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
+
+set -g base-index 1
+setw -g pane-base-index 1
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mrde-vi 'y' send -X copy-selection-and-cancel
