--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 set -sg escape-time 0
 
@@ -26,4 +26,4 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mrde-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
