--- a/config
+++ b/config
@@ -179,9 +179,7 @@ bindsym Print mode "screenshot"
 
 # Use 'setxkbmap -layout us' to reset keyboard layout.
 # keycode/keysym <CODE> = NORMAL SHIFT MODE_SWITCH
-exec_always --no-startup-id xmodmap -e "clear lock"
-exec_always --no-startup-id xmodmap -e "keycode 133 = Mode_switch"
-exec_always --no-startup-id xmodmap -e "keycode 66 = Escape NoSymbol Caps_Lock"
+exec_always --no-startup-id setxkbmap -option caps:escape_shifted_capslock
 exec_always --no-startup-id xsetroot -solid "#202020"
 exec_always --no-startup-id dex -ae i3
 
