Add volumeicon to statusbar.

--- a/config
+++ b/config
@@ -178,6 +178,7 @@ mode "screenshot" {
 }
 bindsym Print mode "screenshot"
 
+exec_always --no-startup-id volumeicon
 exec_always --no-startup-id xsetroot -solid "#202020"
 exec_always --no-startup-id dex -ae i3
 exec_always --no-startup-id blueman-applet
