--- a/config
+++ b/config
@@ -184,9 +184,12 @@ exec_always --no-startup-id xsetroot -solid "#202020"
 exec_always --no-startup-id dex -ae i3
 exec_always --no-startup-id blueman-applet
 
-workspace 1 output primary
-workspace 2 output nonprimary
-workspace 10 output primary
+# Add ~/.i3_monitors to configure primary/nonprimary display outputs
+# workspace 1 output primary
+# workspace 2 output nonprimary
+# workspace 10 output primary
+
+include ~/.i3_monitors
 
 # Review the lines below and append to ~/.config/i3/config
 
@@ -220,11 +223,9 @@ bindsym XF86AudioLowerVolume exec --no-startup-id $volumepath/volume -n -t $stat
 bindsym XF86AudioMute        exec --no-startup-id $volumepath/volume -n -t $statuscmd -u $statussig mute
 
 # EMU windows
-workspace 10 output primary
-exec --no-startup-id i3-msg 'workspace 10; exec i3-sensible-terminal'
 assign [title="^.+@.+:.+"] 10
 assign [title="Terminal on edaemu.*"] 10
-workspace 9 output primary
 assign [title="^[^~]+ on edaemu.*"] 9
 
+exec --no-startup-id i3-msg 'workspace 10; exec i3-sensible-terminal'
 exec --no-startup-id i3-msg 'workspace 1'
