Set caps_lock as escape.

--- a/config
+++ b/config
@@ -32,6 +32,9 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+# Key mappings
+exec_always --no-startup-id setxkbmap -option caps:escape
+
 # Use pactl to adjust volume in PulseAudio.
 # set $refresh_i3status killall -SIGUSR1 i3blocks
 set $refresh_i3status pkill -RTMIN+10 i3blocks
