--- a/i3blocks/config
+++ b/i3blocks/config
@@ -34,6 +34,7 @@ markup=none
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
+command=/usr/share/i3blocks/volume "1%"
 label=VOL
 #label=♪
 instance=Master
