--- a/config
+++ b/config
@@ -204,6 +204,22 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+mode "screenshot" {
+        # Screenshot specific window or rectangle
+        bindsym w --release exec scrot -s -e 'mv $f /tmp/ && eog /tmp/$f && rm /tmp/$f'; mode "screenshot"; mode "default"
+        # Screenshot full screen
+        bindsym f exec scrot -e 'mv $f /tmp/ && eog /tmp/$f && rm /tmp/$f'; mode "screenshot"; mode "default"
+
+        # Open image viewer
+        bindsym v --release exec eog; mode "default"
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+bindsym Print mode "screenshot"
+# Screenshot mode for Keychron K2
+bindsym Mod4+s mode "screenshot"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
