--- a/i3blocks/config
+++ b/i3blocks/config
@@ -101,12 +101,12 @@ min_width=CPU: 100.00%
 # Battery indicator
 #
 # The battery instance defaults to 0.
-[battery]
-label=BAT
+#[battery]
+#label=BAT
 #label=⚡
 #instance=1
-interval=30
-command=acpi
+#interval=30
+#command=acpi
 
 # Date Time
 #
