--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -75,13 +75,13 @@ CPU16: ${cpu cpu16}% $alignr ${freq (8)} MHz $alignr ${cpubar cpu8 16,60}
 
 ${color #88cc00}Swap Usage: $swapperc% = $swap/$swapmax ${color #88cc00} ${swapbar 4 color1 color3}
 $hr
-${color1}Net Down:${color} ${downspeed wlp113s0} ${goto 270}${color1}Net Up:${color} ${upspeed wlp113s0}
-${color1}${downspeedgraph wlp113s0 60,240 07CC0D FF0000 -t}${color1} ${goto 270}${upspeedgraph wlp113s0 60,250 07CC0D FF0000 -t}
+${color1}Net Down:${color} ${downspeed wlp6s0} ${goto 270}${color1}Net Up:${color} ${upspeed wlp6s0}
+${color1}${downspeedgraph wlp6s0 60,240 07CC0D FF0000 -t}${color1} ${goto 270}${upspeedgraph wlp6s0 60,250 07CC0D FF0000 -t}
 $hr
 ${color1}Temperatures in Celsius:
-${color1}HDDs	${color} ${hddtemp /dev/sda}    ${hddtemp /dev/sdb}
-${color1}CPUs	${color} ${hwmon 0 temp 1}
-${color1}PCH	${color} ${hwmon 1 temp 1}
+${color1}SSDs	${color} ${hwmon 0 temp 1}
+${color1}CPUs	${color} ${hwmon 2 temp 1}
+${color1}PCH	${color} ${hwmon 0 temp 2}
 #GPU Attributes:
 
 ${color1}GPU:${color #FCAF3E}${exec nvidia-smi --query-gpu=gpu_name --format=csv,noheader,nounits} $color
