Cleaning up some system temperatures.

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -79,9 +79,9 @@ ${color1}Net Down:${color} ${downspeed wlp6s0} ${goto 270}${color1}Net Up:${colo
 ${color1}${downspeedgraph wlp6s0 60,240 07CC0D FF0000 -t}${color1} ${goto 270}${upspeedgraph wlp6s0 60,250 07CC0D FF0000 -t}
 $hr
 ${color1}Temperatures in Celsius:
-${color1}SSDs	${color} ${hwmon 0 temp 1}
-${color1}CPUs	${color} ${hwmon 2 temp 1}
-${color1}PCH	${color} ${hwmon 0 temp 2}
+${color1}SSDs ${color} $alignr ${hwmon 0 temp 1} ${hwmon 0 temp 2} ${hwmon 0 temp 3}
+${color1}CPUs ${color} $alignr ${hwmon 2 temp 1}
+${color1}PCH ${color} $alignr ${hwmon 0 temp 3}
 #GPU Attributes:
 
 ${color1}GPU:${color #FCAF3E}${exec nvidia-smi --query-gpu=gpu_name --format=csv,noheader,nounits} $color
