Better filtering for GPU stats.

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -85,10 +85,10 @@ ${color1}PCH ${color} $alignr ${hwmon 0 temp 3}
 #GPU Attributes:
 
 ${color1}GPU:${color #FCAF3E}${exec nvidia-smi --query-gpu=gpu_name --format=csv,noheader,nounits} $color
-${color1}GPU Temperature ${color}  ${execi 60 nvidia-settings -query [gpu:0]/GPUCoreTemp -t} °C
-${color1}GPU Utilization ${color}  ${exec nvidia-smi | grep % | cut -c 3-7}
-${color1}VRAM Utilization ${color} ${exec nvidia-smi | grep % | cut -c 47-50} MB
-${color1}GPU Power Draw ${color} ${exec nvidia-smi | grep % | cut -c 30-34} W
+${color1}GPU Temperature ${color}  $alignr ${execi 60 nvidia-settings -query [gpu:0]/GPUCoreTemp -t} °C
+${color1}GPU Utilization ${color}  $alignr ${exec nvidia-smi -q -d utilization | grep Gpu | cut -d ":" -f 2}
+${color1}VRAM Utilization ${color} $alignr ${exec nvidia-smi -q -d memory | grep Used | head -1 | cut -d ":" -f 2}
+${color1}GPU Power Draw ${color}   $alignr ${exec nvidia-smi -q -d power | grep "Power Draw" | cut -d ":" -f 2}
 
 
 ${color1}Top Processes:
