Conky config update to take advantage of chipset.

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -1,3 +1,5 @@
+# Check /sys/class/hwmon for hwmon values.
+
 alignment top_right
 background = false
 border_width 1
@@ -78,19 +80,25 @@ $hr
 ${color1}Net Down:${color} ${downspeed wlp6s0} ${goto 270}${color1}Net Up:${color} ${upspeed wlp6s0}
 ${color1}${downspeedgraph wlp6s0 60,240 07CC0D FF0000 -t}${color1} ${goto 270}${upspeedgraph wlp6s0 60,250 07CC0D FF0000 -t}
 $hr
-${color1}Temperatures in Celsius:
-${color1}SSDs ${color} $alignr ${hwmon 0 temp 1} ${hwmon 0 temp 2} ${hwmon 0 temp 3}
-${color1}CPUs ${color} $alignr ${hwmon 2 temp 1}
-${color1}PCH ${color} $alignr ${hwmon 0 temp 3}
-#GPU Attributes:
+${color1}Temperatures:
+${color1}SSDs ${color} $alignr ${hwmon 2 temp 7} °C
+${color1}System ${color} $alignr ${hwmon 2 temp 1} °C
+${color1}CPU ${color} $alignr ${hwmon 2 temp 1} °C
+${color1}CPU Socket ${color} $alignr ${hwmon 2 temp 5} °C
+${color1}PCH ${color} $alignr ${hwmon 2 temp 4} °C
 
-${color1}GPU:${color #FCAF3E}${exec nvidia-smi --query-gpu=gpu_name --format=csv,noheader,nounits} $color
+${color1}Fan Speed:
+${color1}CPU ${color} $alignr ${hwmon 2 fan 1} RPM
+${color1}M2 Fan ${color} $alignr ${hwmon 2 fan 2} RPM
+${color1}System ${color} $alignr ${hwmon 2 fan 4} RPM
+
+#GPU Attributes:
+${color1}GPU: $alignr ${color #FCAF3E}${exec nvidia-smi --query-gpu=gpu_name --format=csv,noheader,nounits}$color
 ${color1}GPU Temperature ${color}  $alignr ${execi 60 nvidia-settings -query [gpu:0]/GPUCoreTemp -t} °C
 ${color1}GPU Utilization ${color}  $alignr ${exec nvidia-smi -q -d utilization | grep Gpu | cut -d ":" -f 2}
 ${color1}VRAM Utilization ${color} $alignr ${exec nvidia-smi -q -d memory | grep Used | head -1 | cut -d ":" -f 2}
 ${color1}GPU Power Draw ${color}   $alignr ${exec nvidia-smi -q -d power | grep "Power Draw" | cut -d ":" -f 2}
-
-
+$hr
 ${color1}Top Processes:
 ${color1}Name              PID    CPU%   MEM%  TIME     USER
 ${color}${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1} ${top time 1} ${top user 1}
@@ -99,7 +107,6 @@ ${color}${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3} ${top time 3} ${top
 ${color}${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4} ${top time 4} ${top user 4}
 ${color}${top name 5} ${top pid 5} ${top cpu 5} ${top mem 5} ${top time 5} ${top user 5}
 
-$hr
 #${color Tan2}ESTABLISHED Connections${color DarkSlateGray}${hr 2}
 #
 #${offset 10}${color lightgrey}Inbound: ${color white}${tcp_portmon 1 32767 count} ${color lightgrey}Outbound: ${color white}${tcp_portmon 32768 61000 count}${alignr}${color lightgrey}Total: ${color white}${tcp_portmon 1 65535 count}
@@ -108,18 +115,18 @@ $hr
 #
 #${texeci 3 netstat -ap | grep 'ESTABLISHED' | sed -r 's|.*[0-9.]+:([0-9]*)\s*([^:]+):([a-zA-Z]+)[^/]+/([a-zA-Z0-9]*)|\4 \2 \1 \3|' | awk '{printf("%-14s %-20s %5s %7s\n",$1,$2,$3,$4)}'}
 #old way for network
-${color1} Port(s) ${alignr} #Connections
-${color}  Inbound: ${tcp_portmon 1 32767 count}  Outbound: ${tcp_portmon 32768 61000 count} ${alignr} ALL: ${tcp_portmon 1 65535 count}
-${color1} Inbound Connection ${alignr} Local Service/Port ${color}
-${tcp_portmon 1 32767 rhost 0} ${alignr} ${tcp_portmon 1 32767 lservice 0}
-${tcp_portmon 1 32767 rhost 1} ${alignr} ${tcp_portmon 1 32767 lservice 1}
-${tcp_portmon 1 32767 rhost 2} ${alignr} ${tcp_portmon 1 32767 lservice 2}
-${tcp_portmon 1 32767 rhost 3} ${alignr} ${tcp_portmon 1 32767 lservice 3}
-${tcp_portmon 1 32767 rhost 4} ${alignr} ${tcp_portmon 1 32767 lservice 4}
-${color1}Outbound Connection ${alignr} Remote Service/Port${color}
-${tcp_portmon 32768 61000 rhost 0} ${alignr} ${tcp_portmon 32768 61000 rservice 0}
-${tcp_portmon 32768 61000 rhost 1} ${alignr} ${tcp_portmon 32768 61000 rservice 1}
-${tcp_portmon 32768 61000 rhost 2} ${alignr} ${tcp_portmon 32768 61000 rservice 2}
-${tcp_portmon 32768 61000 rhost 3} ${alignr} ${tcp_portmon 32768 61000 rservice 3}
-${tcp_portmon 32768 61000 rhost 4} ${alignr} ${tcp_portmon 32768 61000 rservice 4}
+# ${color1} Port(s) ${alignr} #Connections
+# ${color}  Inbound: ${tcp_portmon 1 32767 count}  Outbound: ${tcp_portmon 32768 61000 count} ${alignr} ALL: ${tcp_portmon 1 65535 count}
+# ${color1} Inbound Connection ${alignr} Local Service/Port ${color}
+# ${tcp_portmon 1 32767 rhost 0} ${alignr} ${tcp_portmon 1 32767 lservice 0}
+# ${tcp_portmon 1 32767 rhost 1} ${alignr} ${tcp_portmon 1 32767 lservice 1}
+# ${tcp_portmon 1 32767 rhost 2} ${alignr} ${tcp_portmon 1 32767 lservice 2}
+# ${tcp_portmon 1 32767 rhost 3} ${alignr} ${tcp_portmon 1 32767 lservice 3}
+# ${tcp_portmon 1 32767 rhost 4} ${alignr} ${tcp_portmon 1 32767 lservice 4}
+# ${color1}Outbound Connection ${alignr} Remote Service/Port${color}
+# ${tcp_portmon 32768 61000 rhost 0} ${alignr} ${tcp_portmon 32768 61000 rservice 0}
+# ${tcp_portmon 32768 61000 rhost 1} ${alignr} ${tcp_portmon 32768 61000 rservice 1}
+# ${tcp_portmon 32768 61000 rhost 2} ${alignr} ${tcp_portmon 32768 61000 rservice 2}
+# ${tcp_portmon 32768 61000 rhost 3} ${alignr} ${tcp_portmon 32768 61000 rservice 3}
+# ${tcp_portmon 32768 61000 rhost 4} ${alignr} ${tcp_portmon 32768 61000 rservice 4}
 
