Add all available temperatures.

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -81,11 +81,13 @@ ${color1}Net Down:${color} ${downspeed wlp6s0} ${goto 270}${color1}Net Up:${colo
 ${color1}${downspeedgraph wlp6s0 60,240 07CC0D FF0000 -t}${color1} ${goto 270}${upspeedgraph wlp6s0 60,250 07CC0D FF0000 -t}
 $hr
 ${color1}Temperatures:
-${color1}SSDs ${color} $alignr ${hwmon 2 temp 7} °C
-${color1}System ${color} $alignr ${hwmon 2 temp 1} °C
 ${color1}CPU ${color} $alignr ${hwmon 2 temp 1} °C
-${color1}CPU Socket ${color} $alignr ${hwmon 2 temp 5} °C
+${color1}System ${color} $alignr ${hwmon 2 temp 2} °C
+${color1}VRM MOS ${color} $alignr ${hwmon 2 temp 3} °C
 ${color1}PCH ${color} $alignr ${hwmon 2 temp 4} °C
+${color1}CPU Socket ${color} $alignr ${hwmon 2 temp 5} °C
+${color1}PCIe x1 ${color} $alignr ${hwmon 2 temp 6} °C
+${color1}SSDs ${color} $alignr ${hwmon 2 temp 7} °C
 
 ${color1}Fan Speed:
 ${color1}CPU ${color} $alignr ${hwmon 2 fan 1} RPM
