Fixed pipewire Sound Unknown message.

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -47,8 +47,9 @@ markup=none
 # signal=10
 [volume-pipewire]
 command=~/.config/i3blocks/volume-pipewire.sh
-interval=once
+interval=persist
 signal=10
+SUBSCRIBE=1
 
 # Memory usage
 #
