Make a copy of volume-pipewire.
Remove subscribe as clicking no longer works.

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -47,9 +47,8 @@ markup=none
 # signal=10
 [volume-pipewire]
 command=~/.config/i3blocks/volume-pipewire.sh
-interval=persist
+interval=once
 signal=10
-SUBSCRIBE=1
 
 # Memory usage
 #
